_sass/template/components/_component--home.scss
/**
  * Component: Home Page
  *  
  * @description
  * -
  */



.home--hero-wrapper h1,
.home--features-wrapper h1,
.home--toc-wrapper h1 {
	grid-column: 1 / -1;
	color: color(blue, XXXXX);
}


.parralax-wrapper {
	perspective: 1px;
  height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
}

.parralax-top,
.parralax-bottom {
	position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.parralax-top {
	transform: translateZ(-3px) scale(4);
}

.parralax-bottom {
  width: 100vw;
  position: relative;
  top: calc(100vh - 80px);
  transform: translateZ(0);
  background-color: color(neutral, X);
}





// Hero
// ----------------------------------------------------------------------------

.home--hero-wrapper {
	margin-top: 54px;
	width: 100vw;
	box-sizing: border-box;
	@include stack(xxs);
	@include respond-to(m){
		margin-top: 64px;
	}

	.img-wrapper {
		width: 100vw;
		@include aspect-ratio(2, 1); // formerly .85
	}

	img {
		object-fit: cover;
		min-width: 100%;
	}

	video {
		width: 100%;
	}

	.home--hero-text {
		@include grid-parent();
		position: absolute;
		z-index: 500;
		top: bl(3); //12px
		left: 20px;
		box-sizing: border-box;
		@include respond-to(s){
			top: bl(4); //16px
		}
	}

	h1 {
		@include typestyle($sans-lg-bld);
		color: color(warm, XX);
		span {
			color: color(warm, X);
		}		
	}

	h1.alcf {
		grid-column: 1 / 7;
	}

	h1.title {
		grid-column: 7 / -1;
	}

	.home--hero-scrim {
		position: absolute;
		z-index: 400;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		background-color: color(blue, XXXX);
		opacity: 0.5;
		mix-blend-mode: multiply;
	}
}

.home--content-wrapper {
	width: 100vw;
	background-color: color(neutral, X);
}

.home--hero-caption {
	@include grid-parent($config: $grid-full);
	@include stack(xs);

	small {
		grid-column: 1 / 11;
		color: color(neutral, XXXX);
	}

	.credit {
		font-style: italic;
	}
}




// Features
// ----------------------------------------------------------------------------

.home--features-wrapper  {
	width: 100vw;
	padding: bl(10) 0;

	.content-wrapper {
		@include grid-parent($config: $grid-full);
	}

	h2, h3, p {
		grid-column: 1 / -1;
	}

	a {
		text-decoration: none;
	}

	h2 {
		@include stack(sm);
		color: color(blue, XXXXX);
		@include typestyle($sans-md-bld);
		@include respond-to(s){
			@include typestyle($sans-lg-bld);
		}

		&::before {
			content: "";
    	width: 24px;
    	height: 8px;
    	margin-bottom: .5rem;
    	display: block;
    	background-color: color(blue, XXXX);
    	@include respond-to(s){
    		width: 36px;
				margin-bottom: 1rem;
			}
		}
	}

	h3 {
		@include typestyle($sans-sm-bld);
		margin-bottom: 0;
		text-transform: none;
		line-height: bl(5);
		@include stack(xs);
	}

	p {
		@include typestyle($sans-sm-reg);
	}

	.teaser {
		background: color(green, XXXX);
  	color: color(blue, X);
		transition: all .15s;
		@include stack(md);
		grid-column: span 12;
		@include respond-to(s){
			grid-column: span 6;
		}
		@include respond-to(m){
			grid-column: span 4;
		}

		.image-wrapper {
			@include aspect-ratio(16, 9);
			background-color: color(neutral, X);
			border: 1px solid color(neutral, XXX);
		}

		img {
			object-fit: cover;
		}

		.hover-scrim {
			position: absolute;
			top: 0;
			right: 0;
			bottom: 0;
			left: 0;
			background-color: color(blue, XXXXX);
			opacity: 0;
			transition: all .15s;
			mix-blend-mode: multiply;
		}

		&:hover {
			background-color: color(green, XXXXX);
			h3 { text-decoration: underline; }
			.hover-scrim { opacity: .2; }
		}
	}

	.teaser .content-wrapper {
		padding: bl(4) 0 bl(6); //16px 24px
	}

	
}





// TOC
// ----------------------------------------------------------------------------

.home--toc-wrapper  {
	background-color: color(green, XXXXX);
	color: color(neutral, X);
	width: 100vw;
	padding: bl(7) 0 bl(14);

	.content-wrapper {
		@include grid-parent($config: $grid-full);
	}

	h2 {
		@include stack(sm);
		grid-column: 1 / -1;
		color: color(warm, X);
		@include typestyle($sans-md-bld);
		@include respond-to(s){
			@include typestyle($sans-lg-bld);
		}

		&::before {
			content: "";
    	width: 24px;
    	height: 8px;
    	margin-bottom: .5rem;
    	display: block;
    	background-color: color(blue, XX);
    	@include respond-to(s){
    		width: 36px;
				margin-bottom: 1rem;
			}
		}
	}

	h3 {
		text-transform: none;
		@include typestyle($sans-sm-bld);
		border-bottom: 2px solid color(blue, XX);
		// @include stack(xs);
		margin-bottom: 0;
	}

	a {
		text-decoration: none;
		&:hover {
			text-decoration: underline;
		}
	}

	.toc-section {
		grid-column: span 12;
		@include respond-to(s){
			grid-column: span 6;
		}
	}

	.toc-section ul {
		list-style: none;
		@include stack(md);
		padding-left: 0;
	}

	.toc-science {
		@include grid-child($cols: 12);
		h3 { grid-column: span 12 }
	}

	.toc-science .hl {
		border-bottom: 2px solid color(blue, XXX);
		grid-column: span 12;
		padding-bottom: bl(1);
		margin-top: bl(1);
	}

	.toc-science .not-hl {
		grid-row: 15;
		grid-column: span 3;
	}

	ul.toc-highlights {
		// @include grid-child($cols: 4);
		border-bottom: 2px solid color(blue, XXX);
		padding-bottom: bl(5);
		@include stack(xxs);
		grid-column: span 12;
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		grid-template-rows: repeat(7, 1fr);
		grid-auto-flow: column;
    grid-column-gap: 20px;
    column-gap: 20px;
    grid-row-gap: 0rem;
    row-gap: 0rem;
    @include respond-to(s){
			grid-template-columns: repeat(6, 1fr);
			grid-template-rows: repeat(5, 1fr);
		}
	}

	.toc-highlight {
		margin-top: bl(2); //8px
		@include stack(md);
	}

	.toc-highlight .title,
	.toc-highlight .pi {
		display: block;
	}

	.toc-highlight .title {
		@include typestyle($sans-xs-bld);
		margin-bottom: 0;
	}

	.toc-highlight .pi {
		@include typestyle($sans-xs-reg);
	}

	.toc-science li {
		grid-column: span 1;
		@include respond-to(s){
			grid-column: span 2;
		}
	}

}

